# colorful-void

./: README.md
hardware/: README.md  colorful-void-cache.lib  colorful-void.kicad_pcb  colorful-void.pro  colorful-void.sch  colorful-void.sch-bak  fp-lib-table  misc_hardware.lib  sym-lib-table
hardware/misc_hardware.pretty/: Kaweei_KP120-XP.scad  MountingHole_M2.5.kicad_mod  TerminalBlock_Kaweei_1x02_P2.54mm_Horizontal.STEP  TerminalBlock_Kaweei_1x02_P2.54mm_Horizontal.kicad_mod  TerminalBlock_Kaweei_1x03_P2.54mm_Horizontal.STEP  TerminalBlock_Kaweei_1x03_P2.54mm_Horizontal.kicad_mod
infrastructure/: nginx.site  void-client.service  void-server.service
void-client/: Cargo.toml  README.md
void-client/src/: light.rs  main.rs  proto.rs
void-client/src/proto/: brightness.rs  mod.rs  rgb.rs
void-server/: .gitignore  README.md  default.nix  stack.yaml  void-server.cabal
void-server/src/: App.hs  Auth.hs  Main.hs  Server.hs  Token.hs
void-server/src/API/: Client.hs  Fulfillment.hs  Server.hs  Token.hs
void-server/src/API/Fulfillment/: Execute.hs  Query.hs  Sync.hs
