cabal-version:       2.4

name:                void-server
version:             0.1.0.0
synopsis:            Control server for colorful-void lighting panel
license:             GPL-3.0-or-later
license-file:        LICENSE
author:              Jared Beller
maintainer:          jbellerb@vt.edu

executable void-server
  main-is:             Main.hs
  build-depends:       base >=4.12.0.0
                     , aeson
                     , bytestring
                     , containers
                     , http-api-data
                     , http-client
                     , servant-auth-server >= 0.4.6.0
                     , servant-client
                     , servant-server
                     , text
                     , time
                     , transformers
                     , wai
                     , wai-logger
                     , warp
  hs-source-dirs:      src
  other-modules:       Auth
                     , API.Client
                     , API.Fulfillment
                     , API.Fulfillment.Execute
                     , API.Fulfillment.Query
                     , API.Fulfillment.Sync
                     , API.Token
                     , App
                     , Server
  default-language:    Haskell2010
