cabal-version: 2.4
name:          void-server
version:       0.1.0
build-type:    Simple
license:       GPL-3.0-or-later
license-file:  LICENSE
copyright:     (c) 2020-2021 Jared Beller
author:        Jared Beller <jbellerb@vt.edu>
maintainer:    Jared Beller <jbellerb@vt.edu>
stability:     alpha
tested-with:   GHC == 8.8.4
synopsis:      Control server for colorful-void lighting panel

executable void-server
  main-is: Main.hs
  default-language: Haskell2010

  build-depends:
    base >=4.12.0.0,
    aeson,
    bytestring,
    containers,
    http-api-data,
    http-client,
    servant-auth-server >= 0.4.6.0,
    servant-client,
    servant-server,
    text,
    time,
    transformers,
    wai,
    wai-logger,
    warp

  hs-source-dirs: src
  other-modules: 
    Auth
    API.Client
    API.Fulfillment
    API.Fulfillment.Execute
    API.Fulfillment.Query
    API.Fulfillment.Sync
    API.Token
    App
    Server
